--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ application {
 
 javafx {
     version = '21'
-    modules = ['javafx.controls']
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
