--- a/build.gradle
+++ b/build.gradle
@@ -38,16 +38,14 @@ javafx {
 }
 
 dependencies {
-    implementation('org.controlsfx:controlsfx:11.2.1')
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
     implementation('io.github.palexdev:materialfx:11.17.0')
     implementation('fr.brouillard.oss:cssfx:11.4.0')
 
     implementation files('libs/scenicview.jar')
 
-    implementation("com.google.code.gson:gson:2.10.1")
+    implementation('com.google.code.gson:gson:2.10.1')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation('org.jetbrains.kotlin:kotlin-stdlib-jdk8')
 }
 
 jlink {
