--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation('com.google.code.gson:gson:2.10.1')
 
     implementation('org.jetbrains.kotlin:kotlin-stdlib-jdk8')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3')
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.7.3')
 }
 
 jlink {
