--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
-
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'org.jetbrains.kotlin.jvm'
 }
 
@@ -18,6 +17,10 @@ repositories {
     }
 }
 
+java {
+    sourceCompatibility = JavaLanguageVersion.of(21)
+    targetCompatibility = JavaLanguageVersion.of(21)
+}
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
@@ -25,6 +28,19 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.withType(Jar).configureEach {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'dev.ag6.mclauncher.Main',
+        )
+    }
+}
+
+shadowJar {
+    mergeServiceFiles()
+    archiveClassifier = ''
 }
 
 application {
@@ -50,17 +66,6 @@ dependencies {
     implementation('org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.7.3')
 }
 
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
-    }
-}
-
-jlinkZip {
-    group = 'distribution'
-}
 kotlin {
     jvmToolchain(21)
 }
