changes to window creation, view management, game versioning

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,8 @@ kotlinVersion=1.9.0
 # Dependencies
 cssfxVersion=11.4.0
 gsonVersion=2.10.1
-koinBomVersion=4.1.0
 kotlinLoggingVersion=7.0.3
-slf4jVersion=2.0.7
+logbackVersion=1.5.20
 materialfxVersion=11.17.0
 okhttpVersion=5.3.0
 kotlinStdlibVersion=1.9.0
