navigation stack, instance loading rewrite, started adding create instance view

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ okhttpVersion=5.3.0
 kotlinStdlibVersion=1.9.0
 coroutinesVersion=1.7.3
 ag6KonfigVersion=1.0.0
+fxStageVersion=0.8.1
 
 # JavaFX
 javafxVersion=21
