--- a/scenicView.properties
+++ b/scenicView.properties
@@ -1,5 +1,5 @@
 #ScenicView properties
-#Mon Jun 30 22:58:33 BST 2025
+#Mon Nov 03 16:20:35 GMT 2025
 autoRefreshStyleSheets=false
 automaticScenegraphStructureRefreshing=true
 collapseContainerControls=false
@@ -14,6 +14,6 @@ showFilteredNodesInTree=true
 showInvisibleNodes=false
 showNodesIdInTree=false
 showSearchBar=true
-splitPaneDividerPosition=0.32334183673469385
+splitPaneDividerPosition=0.3909438775510204
 stageHeight=800.0
 stageWidth=800.0
